# MinixChain

./: .gitignore  Cargo.toml  Makefile  README.md  SaleClockAuction.sol  rust-toolchain
.github/workflows/: ci.yml
contracts/: coming-nft.sol  coming-nft_istanbul.sol
develop_docs/: Setting Up a Local MinixChain Node.md  Using Ethereum Libraries to Deploy Smart Contracts on MinixChain.md  Using With Remix.md  Using with MetaMask.md  Using with Truffle.md
docker/: Dockerfile  build.sh
frame/threshold-signature/: Cargo.toml  README.md
frame/threshold-signature/rpc/: Cargo.toml
frame/threshold-signature/rpc/runtime-api/: Cargo.toml
frame/threshold-signature/rpc/runtime-api/src/: lib.rs
frame/threshold-signature/src/: lib.rs  mock.rs  primitive.rs  tests.rs  weights.rs
frame/threshold-signature/src/mast/: encode.rs  error.rs  mast.rs  mod.rs
node/: Cargo.toml
node/res/: minix-raw.json  testnet-raw.json
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
pallets/assets/: Cargo.toml
pallets/assets-bridge/: Cargo.toml
pallets/assets-bridge/src/: lib.rs  mock.rs  tests.rs
pallets/assets/src/: lib.rs
pallets/custom-signatures/: Cargo.toml
pallets/custom-signatures/src/: lib.rs
pallets/deposit/: Cargo.toml
pallets/deposit/src/: lib.rs  mock.rs
pallets/ethereum-chain-id/: Cargo.toml
pallets/ethereum-chain-id/src/: lib.rs
pallets/pallet-cid-grade/: Cargo.toml
pallets/pallet-cid-grade/src/: benchmarking.rs  lib.rs  mock.rs
pallets/pallet-coming-auction/: Cargo.toml  README.md
pallets/pallet-coming-auction/rpc/: Cargo.toml
pallets/pallet-coming-auction/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-auction/rpc/runtime-api/src/: lib.rs
pallets/pallet-coming-auction/rpc/src/: lib.rs
pallets/pallet-coming-auction/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-coming-id/: Cargo.toml  README.md
pallets/pallet-coming-id/rpc/: Cargo.toml
pallets/pallet-coming-id/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-id/rpc/runtime-api/src/: lib.rs
pallets/pallet-coming-id/rpc/src/: lib.rs
pallets/pallet-coming-id/src/: benchmarking.rs  lib.rs  migration.rs  mock.rs  nft.rs  tests.rs  weights.rs
pallets/pallet-coming-nft/: Cargo.toml  README.md
pallets/pallet-coming-nft/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs  weights.rs
pallets/pallet-coming-reputation/: Cargo.toml  README.md
pallets/pallet-coming-reputation/rpc/: Cargo.toml
pallets/pallet-coming-reputation/rpc/runtime-api/: Cargo.toml
pallets/pallet-coming-reputation/rpc/runtime-api/src/: lib.rs
pallets/pallet-coming-reputation/rpc/src/: lib.rs
pallets/pallet-coming-reputation/src/: benchmarking.rs  lib.rs  mock.rs  tests.rs
pallets/threshold-signature/: Cargo.toml  README.md
pallets/threshold-signature/rpc/: Cargo.toml
pallets/threshold-signature/rpc/runtime-api/: Cargo.toml
pallets/threshold-signature/rpc/runtime-api/src/: lib.rs
pallets/threshold-signature/rpc/src/: lib.rs
pallets/threshold-signature/src/: benchmarking.rs  lib.rs  mock.rs  primitive.rs  tests.rs  weights.rs
pallets/threshold-signature/src/mast/: mast.rs  mod.rs  pmt.rs
runtime/: Cargo.toml
runtime/minix/: Cargo.toml
runtime/minix/src/: lib.rs  nft.rs
runtime/src/: lib.rs  nft.rs  precompiles.rs
scripts/: checksum.sh  srtool-build.sh
