[workspace]
resolver = "2"

members = [
    "node",
    "runtime",

    "pallets/pallet-coming-id",
    "pallets/pallet-coming-nft",
    "pallets/pallet-coming-auction",
    "pallets/threshold-signature",
    "pallets/ethereum-chain-id",
    "pallets/deposit"
]

[profile.release]
# Substrate runtime requires unwinding.
panic = "unwind"
