[package]
name = "minix-runtime"
version = "3.0.0"
authors = ["Substrate DevHub <https://github.com/substrate-developer-hub>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
hex-literal = { version = "0.3.1", optional = true }

sp-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }

frame-executive = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
# Used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false, optional = true }
# Used for the node template's RPCs
frame-system-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }

pallet-aura = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }
pallet-utility = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8", default-features = false }

# Minix
pallet-coming-id = { version = "1.1.0", default-features = false, path = "../pallets/pallet-coming-id" }
pallet-coming-id-rpc-runtime-api = { version = "1.1.0", default-features = false, path = "../pallets/pallet-coming-id/rpc/runtime-api" }
pallet-coming-nft = { version = "1.1.0", default-features = false, path = "../pallets/pallet-coming-nft" }

# EVM
pallet-ethereum-chain-id = { version = "1.0.0", default-features = false, path = "../pallets/ethereum-chain-id"}
pallet-evm = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.8", default-features = false }
pallet-ethereum = { git = "https://github.com/purestake/frontier", branch = "moonbeam-polkadot-v0.9.8", default-features = false }
pallet-custom-signatures = { default-features = false, path = "../pallets/custom-signatures" }

# EVM precompile
evm = { version="0.27.0", default-features=false, features=["with-codec"] }
pallet-evm-precompile-bn128 = { git="https://github.com/purestake/frontier", default-features=false, branch="moonbeam-polkadot-v0.9.8" }
pallet-evm-precompile-dispatch = { git="https://github.com/purestake/frontier", default-features=false, branch="moonbeam-polkadot-v0.9.8" }
pallet-evm-precompile-modexp = { git="https://github.com/purestake/frontier", default-features=false, branch="moonbeam-polkadot-v0.9.8" }
pallet-evm-precompile-simple = { git="https://github.com/purestake/frontier", default-features=false, branch="moonbeam-polkadot-v0.9.8" }
pallet-evm-precompile-sha3fips = { git="https://github.com/purestake/frontier", default-features=false, branch="moonbeam-polkadot-v0.9.8" }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate', branch = "polkadot-v0.9.8" }

[features]
default = ["std"]
std = [
	"codec/std",

	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system/std",
	"frame-system-rpc-runtime-api/std",

	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"pallet-utility/std",

	"pallet-coming-id/std",
	"pallet-coming-id-rpc-runtime-api/std",
	"pallet-coming-nft/std",

	"pallet-ethereum-chain-id/std",
	"pallet-evm/std",
	"pallet-ethereum/std",
	"pallet-custom-signatures/std"
]
runtime-benchmarks = [
	"hex-literal",
	"sp-runtime/runtime-benchmarks",
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",

	"pallet-coming-id/runtime-benchmarks",
	"pallet-coming-nft/runtime-benchmarks"
]
