[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-auction'
version = "1.3.0"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true }
hex-literal = { version = "0.3.1", optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
sp-arithmetic = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }

pallet-coming-id = { default-features = false, path = "../pallet-coming-id" }

[dev-dependencies]
serde = { version = "1.0.119" }
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-balances = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

[features]
default = ['std']
std = [
	'codec/std',
	'serde/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std',
	'sp-arithmetic/std',
	'pallet-coming-id/std'
]

runtime-benchmarks = [
	"frame-benchmarking",
	"hex-literal"
]

try-runtime = ["frame-support/try-runtime"]
