[package]
authors = ['Minix Chain Developer']
edition = '2018'
name = 'pallet-coming-id'
version = "1.2.0"
license = "Unlicense"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }
serde = { version = "1.0.119", optional = true }
log = { version = "0.4.14", default-features = false }
hex-literal = { version = "0.3.1", optional = true }
scale-info = { version = "1.0.0", default-features = false, features = ["derive"] }

frame-support = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
frame-system = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
frame-benchmarking = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11", optional = true }
sp-runtime = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
sp-std = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }
sp-core = { git = "https://github.com/paritytech/substrate", default-features = false, branch = "polkadot-v0.9.11" }

[dev-dependencies]
codec = { package = "parity-scale-codec", version = "2.0.0" }
serde = { version = "1.0.119" }
hex-literal = { version = "0.3.1"}
sp-io = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
sp-storage = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }
pallet-sudo = { git = "https://github.com/paritytech/substrate", branch = "polkadot-v0.9.11" }

[features]
default = ['std']
std = [
	'codec/std',
	'serde/std',
	'log/std',
	'scale-info/std',
	'frame-support/std',
	'frame-system/std',
	'frame-benchmarking/std',
	'sp-runtime/std',
	'sp-std/std',
	'sp-core/std'
]

runtime-benchmarks = [
	"frame-benchmarking",
	"hex-literal"
]

try-runtime = ["frame-support/try-runtime"]
